@@ -1,3 +1,6 @@
+2014-11-23
+	- Taktik „zum größten Einflussgebiet“ hinzugefügt
+
 2014-11-22
 	- UI: Spielraster + Informationen werden dargestellt
 	- UI: Sprung in die Historie ist möglich
